--- a/public/stylesheets/mobileui.css
+++ b/public/stylesheets/mobileui.css
@@ -133,7 +133,7 @@
     .customize-entries {
         font-weight: normal;
         float: right;
-        margin-right: 5px;
+        margin-right: -32px;
         margin-top: 8px;
     }
 
